feat(backend): removed unnecessary create user endpoint
